Bug 154035 - It is not possible to set tabs in Writer by clicking on the top ruler
Summary: It is not possible to set tabs in Writer by clicking on the top ruler
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: high major
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0 target:7.6.0.2
Keywords: bibisected, bisected, regression
: 154904 155340 155681 (view as bug list)
Depends on:
Blocks: Rulers
  Show dependency treegraph
 
Reported: 2023-03-07 05:16 UTC by surbun
Modified: 2023-08-01 18:12 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
File to show bug (86.65 KB, image/jpeg)
2023-03-07 05:17 UTC, surbun
Details

Note You need to log in before you can comment on or make changes to this bug.
Description surbun 2023-03-07 05:16:02 UTC
Description:
It's no more possible to set tabs on clicking on the top ruler.
Tabs not even shown even if set un proper popup window

Steps to Reproduce:
1.Open a Witer file
2.Click on the top ruler
3.

Actual Results:
No more possibility to set tabs

Expected Results:
Tab set on the clicking place


Reproducible: Always


User Profile Reset: Yes

Additional Info:
File joined to illustrate the bug
Comment 1 surbun 2023-03-07 05:17:03 UTC
Created attachment 185811 [details]
File to show bug

File to show bug
Comment 2 raal 2023-03-11 23:09:29 UTC
Confirm with Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 288c0920a8475f9f2c537212e04aa7649192ad8c
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 3 raal 2023-03-11 23:15:46 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.6.
Adding Cc: to Michael Stahl ; Could you possibly take a look at this one?
Thanks
 134be7c58b05aa3cec939901f66430b2f87b8e4e is the first bad commit
commit 134be7c58b05aa3cec939901f66430b2f87b8e4e
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Feb 24 09:15:20 2023 +0100

    source db115bec9254417ef7a3faf687478fe5424ab378

147024: tdf#78510 sw,cui: split SvxLRSpaceItem for SwTextNode, SwTextFormatColl | https://gerrit.libreoffice.org/c/core/+/147024
Comment 4 surbun 2023-04-06 07:18:20 UTC
Hello,

Just want to enquire about the fixing of this bug reported almost since one month.

Thanks à lot for you work

Gratefully
SB
Comment 5 Gabor Kelemen (Collabora) 2023-05-14 21:28:54 UTC
*** Bug 154904 has been marked as a duplicate of this bug. ***
Comment 6 Gabor Kelemen (Collabora) 2023-05-15 08:59:15 UTC
Also happens on Windows, changing title.
Another symptom is (from duplicate) that even tabulators created in the Paragraph dialog are not visible on the ruler.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dbacaf49ea7f1ed44c5e7a1ec5547d7a165a8c54
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 7 raal 2023-05-16 16:48:45 UTC
*** Bug 155340 has been marked as a duplicate of this bug. ***
Comment 8 Stefan_Lange_KA@T-Online.de 2023-06-03 10:44:13 UTC
I have seen the commit causing the bug contains major changes but wouldn't it be time to correct this bug nevertheless? Soon comes Beta1 and in July the first RC.
Comment 9 raal 2023-06-05 19:49:44 UTC
*** Bug 155681 has been marked as a duplicate of this bug. ***
Comment 10 Julien Nabet 2023-06-06 18:59:51 UTC
Let's increase the importance since:
- it affect at least 2 OSes (Linux + Windows)
- it's a regression
- easy to reproduce (no need to have a specific doc)
- it's not a corner case (there are already 3 dups)
Comment 11 surbun 2023-06-07 08:00:30 UTC
(In reply to Julien Nabet from comment #10)
> Let's increase the importance since:
> - it affect at least 2 OSes (Linux + Windows)
> - it's a regression
> - easy to reproduce (no need to have a specific doc)
> - it's not a corner case (there are already 3 dups)

I agree completly to this comment.

I reported it since 3 month (today) and I'm very much penalise in my daily work due to this bug.

Thanks for everyone of you who will try to find a solution.
Comment 12 Mike Kaganski 2023-07-13 15:14:57 UTC
https://gerrit.libreoffice.org/c/core/+/154395
Comment 13 Commit Notification 2023-07-13 18:05:51 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bfa25258d21430560584e3265cdd4629ee47a1b8

tdf#154035: use correct Which range including the new WIDs

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Stefan_Lange_KA@T-Online.de 2023-07-15 08:14:27 UTC
Test with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 693411e60c6bbd1c2ef25490cc3902f6b2461682
CPU threads: 4; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
was succesful: Tabulators are displayed and can be changed as before the bug.
Comment 15 otula 2023-07-15 12:06:08 UTC
I'm using the rpm package from https://dev-builds.libreoffice.org/daily/master/Linux-rpm_deb-x86_64@tb87-TDF/current/ and there is still a version from 07-07-2023 there, so I can't test it.
Comment 16 Stefan_Lange_KA@T-Online.de 2023-07-15 16:00:05 UTC
Not awaiting problems after the succesful tab test I have changed one of my larger documents.
I have saved the document without any problems but when I tried to export it directly as pdf it seems Writer starts running in a loop (used many cpu but didn't answer).

With 
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 375d423573cf237fb082ed2b4908d8067036d8b2
CPU threads: 4; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
(= last Win64 build published before the fix came)
the export made without any problems.

Therefore I cannot exclude a connection between the fix and the new problem.

But in 693411e60c6bbd1c2ef25490cc3902f6b2461682 there are also several other changes so also an other change could cause the problem.

What should I do, report a new bug with the new found problem? Or should it be investigated withi this bug?
Comment 17 Telesto 2023-07-15 17:34:42 UTC
(In reply to Stefan_Lange_KA@T-Online.de from comment #16)
> What should I do, report a new bug with the new found problem? Or should it
> be investigated withi this bug?

A new bug report is probably a better course of action. The new problem is (a) different (b) possibly unrelated.
Comment 18 Stefan_Lange_KA@T-Online.de 2023-07-15 21:45:16 UTC
OK!
I have reported the new Bug 156306.
Comment 19 Commit Notification 2023-07-26 12:49:33 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/900fb3b9aa1808796ee24ba9795096dec3e85a98

tdf#154035: use correct Which range including the new WIDs

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Stefan_Lange_KA@T-Online.de 2023-07-27 12:19:58 UTC
Test with
Version: 7.6.1.0.0+ (X86_64) / LibreOffice Community
Build ID: fe3ceb5c6ac1fcd52f0c2b20dcfc4d2505aedfe5
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded
was succesful: Tabs are displayed and can be changed as before the bug occured.
Comment 21 BogdanB 2023-07-27 14:43:01 UTC
Verified. Based on comment 20.
Comment 22 Elmar 2023-07-28 12:04:00 UTC
verified with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 529dce3d5b695637a1ccc8b4b697d87c5db0d3a2
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-GB
Calc: threaded

Thank you!
Comment 23 surbun 2023-07-31 05:05:26 UTC
(In reply to Commit Notification from comment #19)
> Mike Kaganski committed a patch related to this issue.
> It has been pushed to "libreoffice-7-6":
> 
> https://git.libreoffice.org/core/commit/
> 900fb3b9aa1808796ee24ba9795096dec3e85a98
> 
> tdf#154035: use correct Which range including the new WIDs
> 
> It will be available in 7.6.0.2.
> 
> The patch should be included in the daily builds available at
> https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> https://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

Hello,

I waited so as to test both version.

The 7.6.0.2 version remained affected
nevertheless, I installed this version and the bug is finally patched

Version: 7.6.1.0.0+ (X86_64) / LibreOffice Community
Build ID: 4386e5555dcf40b54343771fb24287641611b135
CPU threads: 4; OS: Linux 6.4; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded

Tested the master version. This version also is correctly patched

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bcd3ae98a1292a02b8a2c56e114c6016a9a7df51
CPU threads: 12; OS: Linux 6.3; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded


Thanksfully
BS
Comment 24 Mike Kaganski 2023-07-31 05:16:23 UTC
(In reply to surbun from comment #23)

> I waited so as to test both version.
> The 7.6.0.2 version remained affected

There was/is no "7.6.0.2" available in dailies. You could only test 7.6.0.1.0 from 2023-07-26 morning (i.e., before the 7-6 backport was merged), or 7.6.1.0.0 from 2023-07-27 morning daily (the first build cony=taining the patch merged during 26th of July).
Comment 25 Stefan_Lange_KA@T-Online.de 2023-08-01 18:12:37 UTC
Today was published in pe-releases LO 7.6.0.2 and I have it installed.

The test with
Version: 7.6.0.2 (X86_64) / LibreOffice Community
Build ID: 41d6f628ba3f046f16b5fa9fa8db8d4c2ab3b582
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded
was succesful:
Tabs are displayed and I can change them.