tdf#154035: use correct Which range including the new WIDs

After commit db115bec9254417ef7a3faf687478fe5424ab378 (tdf#78510 sw,cui:
split SvxLRSpaceItem for SwTextNode, SwTextFormatColl, 2023-02-24),
aCoreSet is now querying RES_MARGIN_FIRSTLINE, RES_MARGIN_TEXTLEFT,
RES_MARGIN_RIGHT instead of RES_LR_SPACE. Without the fix, it would
return wrong state, and disable the respective item in the cases of
SID_ATTR_TABSTOP_VERTICAL / RES_PARATR_TABSTOP, which disabled the
ruler.

Change-Id: I8ca4ce586b414cefe2be79ec0226ac7808a231d8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154395
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>